--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="responsive-style.css"/>
+<link rel="stylesheet" href="css/responsive-style.css"/>
 
 </head>
 <body>
@@ -34,11 +34,11 @@
     <div class="bg">
         <main class="container">
             <h1 class="text-info pt-2">About me</h1> 
-             <hr>
+             <hr class="dashed">
             <section class="row">
                 <div class="col-md-12"> 
                     <div class="clearfix px-3">
-                    <img src="DHay.jpg" class="float-left" alt="Picture from my wedding"> 
+                    <img src="assets/DHay.jpg" class="float-left" alt="Picture from my wedding"> 
                     <p class="d-inline">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere fugiat totam eos reprehenderit esse, pariatur quam beatae harum aliquam quos vero dignissimos? Labore, cum. Minima, velit ea. Rerum, earum molestiae?
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum, odit voluptas qui alias dolor molestiae numquam culpa enim laboriosam veniam earum quis tenetur, quia laborum debitis, sequi id ex. Consectetur?
                     </p>
