--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="responsive-style.css"/>
+<link rel="stylesheet" href="css/responsive-style.css"/>
 
 </head>
 <body>
@@ -31,8 +31,37 @@
             </ul>
         </div>
     </nav>
-    <div class="bg">
+    <div id="bg">
+        <main id="container">
+            <h1 class="text-info px-3">Portfolio</h1>
+            <hr class="dashed">
+            <div class="row">
+                <!-- <div class="col-md-6"> -->
+                    <img class="pics" src="assets/for-life.jpg">
+                <!-- </div> -->
+                <!-- <div class="col-md-6"> -->
+                    <img class="pics" src="assets/joy.jpg">
+                <!-- </div> -->
+            </div>
+            <div class="row">
+                <!-- <div class="col-md-6"> -->
+                    <img class="pics" src="assets/our-fam.jpg">
+                <!-- </div>
+                <div class="col-md-6"> -->
+                    <img class="pics" src="assets/grandparents.jpg">
+                <!-- </div> -->
+            </div>
+            <div class="row">
+                <!-- <div class="col-md-6"> -->
+                    <img class="pics" src="assets/walking-down.jpg">
+                </div>
+            <!-- </div> -->
 
+        </main>
+        <footer>
+            <div class="footer fixed-bottom bg-dark text-white text-center p-2"> Copyright © This World Traveled 2020
+            </div>
+        </footer>
     </div>
 
     
