cleaning up coding semantics and taking out comments

--- a/contact.html
+++ b/contact.html
@@ -47,14 +47,9 @@
                 <div class="mb-3">
                     <label for="msg-box" class="form-label">Message</label>
                     <textarea class="form-control" id="msg-box" rows="3"></textarea>
-                <!-- <div class="form-check">
-                  <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                  <label class="form-check-label" for="exampleCheck1">Check me out</label>
-                </div> -->
                 <button type="submit" class="btn btn-info">Submit</button>
-              </form>
-
-
+                </div>
+            </form>
         </main>
         <footer>
             <div class="footer fixed-bottom bg-dark text-white text-center p-2"> Copyright © This World Traveled 2020
