--- a/index.html
+++ b/index.html
@@ -38,18 +38,14 @@
             <section class="row">
                 <div class="col-md-12"> 
                     <div class="clearfix px-3">
-                    <img src="assets/DHay.jpg" class="float-left" alt="Picture from my wedding"> 
-                    <p class="d-inline">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere fugiat totam eos reprehenderit esse, pariatur quam beatae harum aliquam quos vero dignissimos? Labore, cum. Minima, velit ea. Rerum, earum molestiae?
+                        <img src="assets/DHay.jpg" class="float-left" alt="Picture from my wedding"> 
+                        <p class="d-inline">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere fugiat totam eos reprehenderit esse, pariatur quam beatae harum aliquam quos vero dignissimos? Labore, cum. Minima, velit ea. Rerum, earum molestiae?
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum, odit voluptas qui alias dolor molestiae numquam culpa enim laboriosam veniam earum quis tenetur, quia laborum debitis, sequi id ex. Consectetur?
-                    </p>
-                </div>
+                        <br/> Lorem, ipsum dolor sit amet consectetur adipisicing elit. In eligendi dolore similique suscipit, ipsum molestias omnis? Officia, eaque ea aliquam sit soluta quisquam. Voluptates quisquam alias odit sint ipsa tenetur!
+                        </p>
+                    </div>
                 </div>
             </section>
-                
-                <!-- <div class="col-md-7 col-sm-7 col-xs-12" class="d-inline"> -->
-                    <!-- <p class="d-inline">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere fugiat totam eos reprehenderit esse, pariatur quam beatae harum aliquam quos vero dignissimos? Labore, cum. Minima, velit ea. Rerum, earum molestiae?
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum, odit voluptas qui alias dolor molestiae numquam culpa enim laboriosam veniam earum quis tenetur, quia laborum debitis, sequi id ex. Consectetur?
-                    </p> -->
             <div class="row">
                     <br>
                     <p id="about">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam nulla nostrum libero aut error odio, voluptates quod excepturi repellendus laboriosam eligendi, sed cumque voluptate unde debitis necessitatibus deleniti consequatur pariatur!</p>
