--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="css/responsive-style.css"/>
@@ -12,7 +14,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-4">
-        <a class="navbar-brand" href="index.html" style="color: lightblue; background-color: rgb(180, 180, 180, 0.2);">Darius Hay</a>
+        <a class="navbar-brand" href="index.html" style="color: lightblue; background-color: transparent;">Darius Hay</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -33,9 +35,12 @@
     </nav>
     <div class="bg">
         <main id="About" class="container">
-            <h1 class="text-info pt-2">Contact</h1>
+            <h1 class="text-info pt-2">Contact Me</h1>
             <hr class="dashed">
-            <form>
+            <h4>Email:   dariushay@gmail.com</h4>
+            <h4>LinkedIn: <a href="https://www.linkedin.com/in/darius-hay-8b24a6200/" target="_blank">Darius Hay</a></h4>
+            <h4>GitHub: <a href="https://github.com/DariusHay" target="_blank">@DariusHay</a></h4>
+            <!-- <form>
                 <div class="mb-3">
                     <label for="name" class="form-label">Name</label>
                     <input type="text" class="form-control" id="name">
@@ -49,7 +54,7 @@
                     <textarea class="form-control" id="msg-box" rows="3"></textarea>
                 <button type="submit" class="btn btn-info">Submit</button>
                 </div>
-            </form>
+            </form> -->
         </main>
         <footer>
             <div class="footer fixed-bottom bg-dark text-white text-center p-2"> Copyright © This World Traveled 2020
