--- a/index.html
+++ b/index.html
@@ -1,21 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About me</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="css/responsive-style.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/responsive-style.css" />
 
 </head>
+
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-4">
-        <a class="navbar-brand" href="index.html" style="color: lightblue; background-color: rgb(180, 180, 180, 0.2);">Darius Hay</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+        <a class="navbar-brand" href="index.html" style="color: lightblue; background-color: transparent;">Darius
+            Hay</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
@@ -33,33 +42,47 @@
     </nav>
     <div class="bg">
         <main class="container">
-            <h1 class="text-info pt-2">About me</h1> 
-             <hr class="dashed">
+            <div class="row" id="top">
+                <h1 id="aboutMeHead" class="text-info pt-2">About me</h1>
+                <a href="./assets/coding-resume .pdf" id="resumelink" target="_blank"><button id="resumeBtn" type="button" class="btn btn-primary">Resume</button></a>
+            </div>
+            <hr class="dashed">
             <section class="row">
-                <div class="col-md-12"> 
+                <div class="col-md-12">
                     <div class="clearfix px-3">
-                        <img src="assets/DHay.jpg" class="float-left" alt="Picture from my wedding"> 
-                        <p class="d-inline">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere fugiat totam eos reprehenderit esse, pariatur quam beatae harum aliquam quos vero dignissimos? Labore, cum. Minima, velit ea. Rerum, earum molestiae?
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum, odit voluptas qui alias dolor molestiae numquam culpa enim laboriosam veniam earum quis tenetur, quia laborum debitis, sequi id ex. Consectetur?
-                        <br/> Lorem, ipsum dolor sit amet consectetur adipisicing elit. In eligendi dolore similique suscipit, ipsum molestias omnis? Officia, eaque ea aliquam sit soluta quisquam. Voluptates quisquam alias odit sint ipsa tenetur!
+                        <img id="main-pic" src="assets/DHay.jpg" class="float-left responsive"
+                            alt="Picture from my wedding">
+                        <p class="d-inline">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere fugiat totam
+                            eos reprehenderit esse, pariatur quam beatae harum aliquam quos vero dignissimos? Labore,
+                            cum. Minima, velit ea. Rerum, earum molestiae?
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum, odit voluptas qui alias
+                            dolor molestiae numquam culpa enim laboriosam veniam earum quis tenetur, quia laborum
+                            debitis, sequi id ex. Consectetur?
+                            <br /> Lorem, ipsum dolor sit amet consectetur adipisicing elit. In eligendi dolore
+                            similique suscipit, ipsum molestias omnis? Officia, eaque ea aliquam sit soluta quisquam.
+                            Voluptates quisquam alias odit sint ipsa tenetur!
                         </p>
                     </div>
                 </div>
             </section>
             <div class="row">
-                    <br>
-                    <p id="about">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam nulla nostrum libero aut error odio, voluptates quod excepturi repellendus laboriosam eligendi, sed cumque voluptate unde debitis necessitatibus deleniti consequatur pariatur!</p>
-            </div>   
+                <br>
+                <p id="about">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam nulla nostrum libero
+                    aut error odio, voluptates quod excepturi repellendus laboriosam eligendi, sed cumque voluptate unde
+                    debitis necessitatibus deleniti consequatur pariatur!</p>
+            </div>
             <footer>
-                <div class="footer fixed-bottom bg-dark text-white text-center p-2"> Copyright © This World Traveled 2020
+                <div class="footer fixed-bottom bg-dark text-white text-center p-2"> Copyright © This World Traveled
+                    2020
                 </div>
             </footer>
-            
+
         </main>
     </div>
-   
 
 
-    
+
+
 </body>
+
 </html>
