--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
         <main class="container">
             <div class="row" id="top">
                 <h1 id="aboutMeHead" class="text-info pt-2">About me</h1>
-                <a href="./assets/coding-resume .pdf" id="resumelink" target="_blank"><button id="resumeBtn" type="button" class="btn btn-primary">Resume</button></a>
+                <a href="./assets/coding-resume .pdf" id="resumelink" target="_blank"><button id="resumeBtn"
+                        type="button" class="btn btn-primary">Resume</button></a>
             </div>
             <hr class="dashed">
             <section class="row">
@@ -52,24 +53,31 @@
                     <div class="clearfix px-3">
                         <img id="main-pic" src="assets/DHay.jpg" class="float-left responsive"
                             alt="Picture from my wedding">
-                        <p class="d-inline">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere fugiat totam
-                            eos reprehenderit esse, pariatur quam beatae harum aliquam quos vero dignissimos? Labore,
-                            cum. Minima, velit ea. Rerum, earum molestiae?
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum, odit voluptas qui alias
-                            dolor molestiae numquam culpa enim laboriosam veniam earum quis tenetur, quia laborum
-                            debitis, sequi id ex. Consectetur?
-                            <br /> Lorem, ipsum dolor sit amet consectetur adipisicing elit. In eligendi dolore
-                            similique suscipit, ipsum molestias omnis? Officia, eaque ea aliquam sit soluta quisquam.
-                            Voluptates quisquam alias odit sint ipsa tenetur!
+                        <p class="d-inline">My name is Darius Hay, I was born in Palm Beach County Florida but was
+                            raised in Brevard County Florida. I grew up in gret family where I learned to treat everyone
+                            with respect from both my father and mother. I also learned the qualities of working hard
+                            and being deligent in life's desires. <br><br> I have grown a passion for web development
+                            and I am currently enrolled to the Coding Bootcamp at UCF. This Bootcamp has been a Blessing
+                            to me and has help me excel in my knowledge as a web developer. I have learned coding
+                            languages such as, HTML, CSS, JavaScript, JQuery and Node.js. I have also learned how to use
+                            API's and 3rd party styling frameworks such as Bootstrap and Materialize. <br> <br>
+                            I still have about 4 months left in this bootcamp and have come a long way from the day I
+                            began. The support from my instructors in this course has pushed me to learn at a pace that
+                            gives me great confidence that I will be employer competitive by the end of this course. I
+                            am also working with a great group of peers that I am learning along with in this course. I
+                            am determined and committed to completing this course with excellence and going above and
+                            beyond in my learning.
                         </p>
                     </div>
                 </div>
             </section>
             <div class="row">
                 <br>
-                <p id="about">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam nulla nostrum libero
-                    aut error odio, voluptates quod excepturi repellendus laboriosam eligendi, sed cumque voluptate unde
-                    debitis necessitatibus deleniti consequatur pariatur!</p>
+                <p id="about">I want to live a Blessed life with my wife and I believe a job as a web developer will
+                    help me live the life I want to live. I am a man of Faith and I believe in showing the love of God
+                    and helping people whenever I can. I want to have the ability to help others and be an asset to
+                    those around me. I want to take my wife to many places and enjoy our time on this Earth. I will
+                    bring integrity and deligent working skills to any company that would give me a chance to kick off my career as a web developer.</p>
             </div>
             <footer>
                 <div class="footer fixed-bottom bg-dark text-white text-center p-2"> Copyright © This World Traveled
