--- a/index.html
+++ b/index.html
@@ -54,18 +54,18 @@
                         <img id="main-pic" src="assets/DHay.jpg" class="float-left responsive"
                             alt="Picture from my wedding">
                         <p class="d-inline">My name is Darius Hay, I was born in Palm Beach County Florida but was
-                            raised in Brevard County Florida. I grew up in gret family where I learned to treat everyone
+                            raised in Brevard County Florida. I grew up in a great family where I learned to treat everyone
                             with respect from both my father and mother. I also learned the qualities of working hard
                             and being deligent in life's desires. <br><br> I have grown a passion for web development
-                            and I am currently enrolled to the Coding Bootcamp at UCF. This Bootcamp has been a Blessing
-                            to me and has help me excel in my knowledge as a web developer. I have learned coding
+                            and I am currently enrolled in the Coding Bootcamp at UCF. This Bootcamp has been a Blessing
+                            to me and has helped me excel in my knowledge as a web developer. I have learned coding
                             languages such as, HTML, CSS, JavaScript, JQuery and Node.js. I have also learned how to use
                             API's and 3rd party styling frameworks such as Bootstrap and Materialize. <br> <br>
                             I still have about 4 months left in this bootcamp and have come a long way from the day I
                             began. The support from my instructors in this course has pushed me to learn at a pace that
-                            gives me great confidence that I will be employer competitive by the end of this course. I
+                            gives me great confidence to believe I will be employer competitive by the end of this course. I
                             am also working with a great group of peers that I am learning along with in this course. I
-                            am determined and committed to completing this course with excellence and going above and
+                            am determined and committed to completing this course with excellence; and going above and
                             beyond in my learning.
                         </p>
                     </div>
