--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
                         <img id="main-pic" src="assets/DHay.jpg" class="float-left responsive"
                             alt="Picture from my wedding">
                         <p class="d-inline">My name is Darius Hay, I was born in Palm Beach County Florida but was
-                            raised in Brevard County Florida. I grew up in a great family where I learned to treat everyone
+                            raised in Brevard County Florida. I grew up in a great family where I learned to treat
+                            everyone
                             with respect from both my father and mother. I also learned the qualities of working hard
                             and being deligent in life's desires. <br><br> I have grown a passion for web development
                             and I am currently enrolled in the Coding Bootcamp at UCF. This Bootcamp has been a Blessing
@@ -63,7 +64,8 @@
                             API's and 3rd party styling frameworks such as Bootstrap and Materialize. <br> <br>
                             I still have about 4 months left in this bootcamp and have come a long way from the day I
                             began. The support from my instructors in this course has pushed me to learn at a pace that
-                            gives me great confidence to believe I will be employer competitive by the end of this course. I
+                            gives me great confidence to believe I will be employer competitive by the end of this
+                            course. I
                             am also working with a great group of peers that I am learning along with in this course. I
                             am determined and committed to completing this course with excellence; and going above and
                             beyond in my learning.
@@ -77,11 +79,11 @@
                     help me live the life I want to live. I am a man of Faith and I believe in showing the love of God
                     and helping people whenever I can. I want to have the ability to help others and be an asset to
                     those around me. I want to take my wife to many places and enjoy our time on this Earth. I will
-                    bring integrity and deligent working skills to any company that would give me a chance to kick off my career as a web developer.</p>
+                    bring integrity and deligent working skills to any company that would give me a chance to kick off
+                    my career as a web developer.</p>
             </div>
             <footer>
-                <div class="footer fixed-bottom bg-dark text-white text-center p-2"> Copyright © This World Traveled
-                    2020
+                <div class="footer fixed-bottom bg-dark text-white text-center p-2"> Darius Hay 407-308-7826
                 </div>
             </footer>
 
