--- a/portfolio.html
+++ b/portfolio.html
@@ -95,7 +95,7 @@
             </div>
         </main>
         <footer>
-            <div class="footer fixed-bottom bg-dark text-white text-center p-2"> Copyright © This World Traveled 2020
+            <div class="footer fixed-bottom bg-dark text-white text-center p-2"> Darius Hay 407-308-7826
             </div>
         </footer>
     </div>
