--- a/contact.html
+++ b/contact.html
@@ -1,23 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="css/responsive-style.css"/>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/responsive-style.css" />
 
 </head>
+
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-4">
-        <a class="navbar-brand" href="index.html" style="color: lightblue; background-color: transparent;">Darius Hay</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+        <a class="navbar-brand" href="index.html" style="color: lightblue; background-color: transparent;">Darius
+            Hay</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
@@ -37,31 +46,19 @@
         <main id="About" class="container">
             <h1 class="text-info pt-2">Contact Me</h1>
             <hr class="dashed">
-            <h4>Email:   dariushay@gmail.com</h4>
-            <h4>LinkedIn: <a href="https://www.linkedin.com/in/darius-hay-8b24a6200/" target="_blank">Darius Hay</a></h4>
+            <h4>Email: dariushay@gmail.com</h4>
+            <h4>LinkedIn: <a href="https://www.linkedin.com/in/darius-hay-8b24a6200/" target="_blank">Darius Hay</a>
+            </h4>
             <h4>GitHub: <a href="https://github.com/DariusHay" target="_blank">@DariusHay</a></h4>
-            <!-- <form>
-                <div class="mb-3">
-                    <label for="name" class="form-label">Name</label>
-                    <input type="text" class="form-control" id="name">
-                </div>
-                <div class="mb-3">
-                    <label for="email" class="form-label">Email address</label>
-                    <input type="email" class="form-control" id="email">
-                </div>
-                <div class="mb-3">
-                    <label for="msg-box" class="form-label">Message</label>
-                    <textarea class="form-control" id="msg-box" rows="3"></textarea>
-                <button type="submit" class="btn btn-info">Submit</button>
-                </div>
-            </form> -->
+
         </main>
         <footer>
-            <div class="footer fixed-bottom bg-dark text-white text-center p-2"> Copyright © This World Traveled 2020
+            <div class="footer fixed-bottom bg-dark text-white text-center p-2"> Darius Hay 407-308-7826
             </div>
         </footer>
     </div>
 
-    
+
 </body>
+
 </html>
