--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
         <main id="About" class="container">
             <h1 class="text-info pt-2">Contact Me</h1>
             <hr class="dashed">
-            <h4>Email: dariushay@gmail.com</h4>
+            <h4>Email: <a target="blank_" class="mailto" href="mailto:dariushay@gmail.com">dariushay@gmail.com</a></h4>
             <h4>LinkedIn: <a href="https://www.linkedin.com/in/darius-hay-8b24a6200/" target="_blank">Darius Hay</a>
             </h4>
             <h4>GitHub: <a href="https://github.com/DariusHay" target="_blank">@DariusHay</a></h4>
