--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <main class="container">
             <div class="row" id="top">
                 <h1 id="aboutMeHead" class="text-info pt-2">About me</h1>
-                <a href="./assets/coding-resume .pdf" id="resumelink" target="_blank"><button id="resumeBtn"
+                <a href="./assets/Coding Resume_2.pdf" id="resumelink" target="_blank"><button id="resumeBtn"
                         type="button" class="btn btn-primary">Resume</button></a>
             </div>
             <hr class="dashed">
@@ -60,9 +60,9 @@
                             and being deligent in life's desires. <br><br> I have grown a passion for web development
                             and I am currently enrolled in the Coding Bootcamp at UCF. This Bootcamp has been a Blessing
                             to me and has helped me excel in my knowledge as a web developer. I have learned coding
-                            languages such as, HTML, CSS, JavaScript, JQuery and Node.js. I have also learned how to use
-                            API's and 3rd party styling frameworks such as Bootstrap and Materialize. <br> <br>
-                            I still have about 4 months left in this bootcamp and have come a long way from the day I
+                            languages such as, HTML, CSS, JavaScript, JQuery, Node.js, MySql, Sequelize, Express.js, Handlebars.js, and much more. I have also learned how to use
+                            API's and 3rd party styling frameworks such as Bootstrap and Materialize. I've also learned coding styles such as Object oriented programming (OOP) and Model-View-Controller (MVC) Framework.<br> <br>
+                            I still have about 2 months left in this bootcamp and have come a long way from the day I
                             began. The support from my instructors in this course has pushed me to learn at a pace that
                             gives me great confidence to believe I will be employer competitive by the end of this
                             course. I
