--- a/portfolio.html
+++ b/portfolio.html
@@ -87,8 +87,36 @@
                         <h5 class="card-title">Coding Quiz</h5>
                         <p class="card-text">This is a coding quiz competition. In this site, you are presented with
                             five questions about coding and have 75 seconds to answer them. For every wrong answer, 15
-                            seconds are deducted from the timer. I creadted this site solely.</p>
+                            seconds are deducted from the timer. I created this site solely.</p>
                         <a href="https://dariushay.github.io/code_quiz/" target="_blank" class="btn btn-primary">Go to
+                            site</a>
+                    </div>
+                </div>
+                <div class="card" style="width: 18rem;">
+                    <img src="./assets/techblog.png" class="card-img-top" alt="Tech Blog">
+                    <div class="card-body">
+                        <h5 class="card-title">Tech Blog</h5>
+                        <p class="card-text">This is an app in which the user can create an account and post blogs to
+                            their account that can be displayed on the website's homepage. The user has the ability to
+                            delete or update their blogs and they also can comment on other user's blogs. I created
+                            this site solely, front and back end.
+                        </p>
+                        <a href="https://techblogcreate.herokuapp.com/" target="_blank" class="btn btn-primary">Go to
+                            site</a>
+                    </div>
+                </div>
+                <div class="card" style="width: 18rem;">
+                    <img src="./assets/medstocks.png" class="card-img-top" alt="Med Stocks">
+                    <div class="card-body">
+                        <h5 class="card-title">MED Stocks</h5>
+                        <p class="card-text">This is an app in which the user can create an account and search for
+                            viable information concerning stocks. This app was created to give an envirornment to people
+                            that are looking to learn Stocks. I contributed to the creation and deployment of this site.
+                            My roles in development were creating the database using MySql, routing to and from the
+                            Database, ordering the database using Sequelize, and deployment of the site through <a
+                                target="_blank" href="https://www.heroku.com">heroku.com</a>.
+                        </p>
+                        <a href="https://medstocks.herokuapp.com/" target="_blank" class="btn btn-primary">Go to
                             site</a>
                     </div>
                 </div>
